--- a/index.html
+++ b/index.html
@@ -1,135 +1,247 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Epic Go-Live FAQ Assistant</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f5f7fa;
-      margin: 0;
-      padding: 0;
-      color: #333;
+{
+  "modules": [
+    {
+      "module": "CardioServer – Tech User",
+      "category": "Cardiology",
+      "roles": ["Tech User"],
+      "steps": [
+        {
+          "title": "Access CardioServer",
+          "items": [
+            "In Epic, open the patient chart → click the CardioServer SmartLink/URL.",
+            "OR on the desktop, double-click the CardioServer icon.",
+            "OR in Citrix Workspace → CardioServer → Open.",
+            "On the login page, enter AD username + password.",
+            "Confirm header shows Role = Tech User."
+          ]
+        }
+      ],
+      "qa": [
+        {
+          "q": "What if a study doesn’t match any patient/order?",
+          "a": "Use Link/Reconcile → search MRN → select correct order."
+        }
+      ],
+      "links": [
+        {
+          "title": "Study Materials Placeholder",
+          "url": "#"
+        }
+      ]
+    },
+    {
+      "module": "EVC (Telehealth / Video Consults)",
+      "category": "Telehealth",
+      "roles": ["Provider", "Bedside Staff"],
+      "steps": [
+        {
+          "title": "Launch a Consult",
+          "items": [
+            "In Epic, open the MPage 'TV Kit Consults' or go to the Converge website.",
+            "Select patient/device.",
+            "Click Start Consult."
+          ]
+        }
+      ],
+      "qa": [
+        {
+          "q": "What if patient can’t hear me?",
+          "a": "Check mute, device volume, and TV Kit connection."
+        }
+      ],
+      "links": [
+        {
+          "title": "Study Materials Placeholder",
+          "url": "#"
+        }
+      ]
+    },
+    {
+      "module": "ASAP (ED Track Board)",
+      "category": "Emergency Department",
+      "roles": ["Nurse", "Provider"],
+      "steps": [
+        {
+          "title": "Track Board Overview",
+          "items": [
+            "Open ED Track Board.",
+            "Review columns for Bed, Name, Age, Complaint, Acuity, Staff initials.",
+            "Hover over initials for full staff names."
+          ]
+        }
+      ],
+      "qa": [
+        {
+          "q": "What does an X in registration mean?",
+          "a": "Registration incomplete. It won’t block discharge."
+        }
+      ],
+      "links": [
+        {
+          "title": "Study Materials Placeholder",
+          "url": "#"
+        }
+      ]
+    },
+    {
+      "module": "Beaker (Lab Workflow)",
+      "category": "Laboratory",
+      "roles": ["Phlebotomist", "Lab Tech"],
+      "steps": [
+        {
+          "title": "Specimen Collection",
+          "items": [
+            "Check-in patient → enter orders.",
+            "Print specimen labels.",
+            "Scan wristband → scan specimen.",
+            "Transport to lab."
+          ]
+        }
+      ],
+      "qa": [
+        {
+          "q": "How do I reprint a specimen label?",
+          "a": "Open the Order → select Reprint Label."
+        }
+      ],
+      "links": [
+        {
+          "title": "Study Materials Placeholder",
+          "url": "#"
+        }
+      ]
+    },
+    {
+      "module": "Optime Anesthesia",
+      "category": "Surgery/Anesthesia",
+      "roles": ["Anesthesiologist", "CRNA", "Resident"],
+      "steps": [
+        {
+          "title": "Login",
+          "items": [
+            "Enter Epic credentials.",
+            "Confirm Department and Role."
+          ]
+        }
+      ],
+      "qa": [
+        {
+          "q": "How do I substitute a signer on consent?",
+          "a": "Enter alternate signer name and add a nurse witness."
+        }
+      ],
+      "links": [
+        {
+          "title": "Study Materials Placeholder",
+          "url": "#"
+        }
+      ]
+    },
+    {
+      "module": "Inpatient Provider Workflow",
+      "category": "Inpatient",
+      "roles": ["Hospitalist", "Resident", "Consultant"],
+      "steps": [
+        {
+          "title": "Navigation",
+          "items": [
+            "Open My Lists.",
+            "Review Storyboard: demographics, team, labs."
+          ]
+        }
+      ],
+      "qa": [
+        {
+          "q": "Where do I reconcile medications?",
+          "a": "During admission, transfer, and discharge."
+        }
+      ],
+      "links": [
+        {
+          "title": "Study Materials Placeholder",
+          "url": "#"
+        }
+      ]
+    },
+    {
+      "module": "Pharmacy (Willow)",
+      "category": "Pharmacy",
+      "roles": ["Pharmacist", "Pharmacy Tech"],
+      "steps": [
+        {
+          "title": "Dashboard & In Basket",
+          "items": [
+            "Open Pharmacy Dashboard.",
+            "Check In Basket: refills, reminders, time changes."
+          ]
+        }
+      ],
+      "qa": [
+        {
+          "q": "What if cart fill labels don’t print?",
+          "a": "Manually reprint via the Dispense button."
+        }
+      ],
+      "links": [
+        {
+          "title": "Study Materials Placeholder",
+          "url": "#"
+        }
+      ]
+    },
+    {
+      "module": "Ambulatory Clinic",
+      "category": "Outpatient/Ambulatory",
+      "roles": ["Physician", "Medical Assistant", "Clinic Staff"],
+      "steps": [
+        {
+          "title": "Learning Home",
+          "items": [
+            "Press F1 in Epic.",
+            "Access Learning Home Dashboard.",
+            "Locate tip sheets/resources."
+          ]
+        }
+      ],
+      "qa": [
+        {
+          "q": "How do I activate MyChart?",
+          "a": "Send activation via text/email; valid 14 days."
+        }
+      ],
+      "links": [
+        {
+          "title": "Study Materials Placeholder",
+          "url": "#"
+        }
+      ]
+    },
+    {
+      "module": "Go-Live Preparation",
+      "category": "Implementation",
+      "roles": ["All Staff"],
+      "steps": [
+        {
+          "title": "Go-Live Overview",
+          "items": [
+            "Go-live date: October 1.",
+            "Saint Francis Evanston + Holy Family Medical Center.",
+            "Holy Family is first LTACH (long-term care) in Prime."
+          ]
+        }
+      ],
+      "qa": [
+        {
+          "q": "What’s unique about Holy Family?",
+          "a": "It’s the first Prime LTACH with distinct workflows."
+        }
+      ],
+      "links": [
+        {
+          "title": "Study Materials Placeholder",
+          "url": "#"
+        }
+      ]
     }
-    header {
-      background: #003366;
-      color: white;
-      padding: 1rem;
-      text-align: center;
-    }
-    .container {
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 1rem;
-      background: white;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-    }
-    h2 {
-      color: #003366;
-    }
-    details {
-      margin-bottom: 1rem;
-      border: 1px solid #ddd;
-      border-radius: 6px;
-      padding: 0.5rem 1rem;
-      background: #fafafa;
-    }
-    summary {
-      cursor: pointer;
-      font-weight: bold;
-      color: #003366;
-    }
-    .steps {
-      margin: 0.5rem 0 0.5rem 1rem;
-      padding-left: 1rem;
-      border-left: 3px solid #003366;
-    }
-    .steps li {
-      margin: 0.3rem 0;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Epic Go-Live FAQ Assistant</h1>
-  </header>
-  <div class="container" id="content">
-    <p>Loading FAQs...</p>
-  </div>
-
-  <script>
-    async function loadFAQs() {
-      try {
-        const response = await fetch("epic_go_live_faq.json");
-        const data = await response.json();
-
-        const container = document.getElementById("content");
-        container.innerHTML = "";
-
-        const modules = data.modules || data;
-
-        modules.forEach(module => {
-          const moduleDiv = document.createElement("div");
-          moduleDiv.innerHTML = `<h2>${module.module}</h2>`;
-
-          // How To section
-          if (module.steps && module.steps.length > 0) {
-            module.steps.forEach(section => {
-              const details = document.createElement("details");
-              details.innerHTML = `<summary>📘 How To: ${section.title}</summary>`;
-              const ul = document.createElement("ul");
-              ul.className = "steps";
-              section.items.forEach(item => {
-                const li = document.createElement("li");
-                li.textContent = item;
-                ul.appendChild(li);
-              });
-              details.appendChild(ul);
-              moduleDiv.appendChild(details);
-            });
-          }
-
-          // FAQs
-          if (module.qa && module.qa.length > 0) {
-            module.qa.forEach(item => {
-              const qaDetails = document.createElement("details");
-              qaDetails.innerHTML = `<summary>❓ ${item.q}</summary><p>${item.a}</p>`;
-              moduleDiv.appendChild(qaDetails);
-            });
-          }
-
-          // Study Materials
-          const linksSection = document.createElement("details");
-          linksSection.innerHTML = `<summary>📎 Study Materials</summary>`;
-          const ul = document.createElement("ul");
-          ul.className = "steps";
-
-          if (module.links && module.links.length > 0) {
-            module.links.forEach(link => {
-              const li = document.createElement("li");
-              li.innerHTML = `<a href="${link.url}" target="_blank">${link.title}</a>`;
-              ul.appendChild(li);
-            });
-          } else {
-            const li = document.createElement("li");
-            li.textContent = "No study materials linked yet.";
-            ul.appendChild(li);
-          }
-
-          linksSection.appendChild(ul);
-          moduleDiv.appendChild(linksSection);
-
-          container.appendChild(moduleDiv);
-        });
-      } catch (error) {
-        document.getElementById("content").innerHTML =
-          `<p style="color:red;">⚠️ Error loading FAQs: ${error.message}</p>`;
-      }
-    }
-
-    loadFAQs();
-  </script>
-</body>
-</html>
+  ]
+}
